@@ -30,7 +30,9 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta9
 
 Fixes:
 
-- Tables: set_value as an empty list caused crash #93
+- Tables:     set_value as an empty list caused crash #93
+- Text:       fixed truncation issue with large strings #92
+- Label Text: fixed truncation issue with large strings #92
 
 New Commands:
 
